refactor(build): Improves the JDK module access metadata declarations in gradle